--- a/.github/workflows/continuous_delivery_dev.yml
+++ b/.github/workflows/continuous_delivery_dev.yml
@@ -2,126 +2,200 @@ name: CD Dev Pipeline
 
 on:
   workflow_dispatch:
-    inputs:
-      image_tag:
-        description: 'Docker image tag'
-        required: true
   
 jobs:
-  provision-and-deploy:
+  
+  setup-env-job:
+    if: ${{ github.repository != 'Azure/llmops-project-template' }}        
+    runs-on: ubuntu-latest
+    environment: dev
+    outputs:
+      AZUREAI_PROJECT_NAME: ${{ steps.config-env.outputs.AZUREAI_PROJECT_NAME }}
+      AZURE_APP_SERVICE_NAME: ${{ steps.config-env.outputs.AZURE_APP_SERVICE_NAME }}
+      AZURE_APP_SERVICE_PLAN_NAME: ${{ steps.config-env.outputs.AZURE_APP_SERVICE_PLAN_NAME }}
+      AZURE_CONTAINER_REGISTRY_NAME: ${{ steps.config-env.outputs.AZURE_CONTAINER_REGISTRY_NAME }}
+      AZURE_CONTAINER_REPOSITORY_NAME: ${{ steps.config-env.outputs.AZURE_CONTAINER_REPOSITORY_NAME }}
+      AZURE_LOCATION: ${{ steps.config-env.outputs.AZURE_LOCATION }}
+      AZURE_OPENAI_API_VERSION: ${{ steps.config-env.outputs.AZURE_OPENAI_API_VERSION }}
+      AZURE_OPENAI_CHAT_DEPLOYMENT: ${{ steps.config-env.outputs.AZURE_OPENAI_CHAT_DEPLOYMENT }}
+      AZURE_OPENAI_EMBEDDING_DEPLOYMENT: ${{ steps.config-env.outputs.AZURE_OPENAI_EMBEDDING_DEPLOYMENT }}
+      AZURE_OPENAI_EMBEDDING_MODEL: ${{ steps.config-env.outputs.AZURE_OPENAI_EMBEDDING_MODEL }}
+      AZURE_OPENAI_ENDPOINT: ${{ steps.config-env.outputs.AZURE_OPENAI_ENDPOINT }}
+      AZURE_OPENAI_NAME: ${{ steps.config-env.outputs.AZURE_OPENAI_NAME }}
+      AZURE_RESOURCE_GROUP: ${{ steps.config-env.outputs.AZURE_RESOURCE_GROUP }}
+      AZUREAI_RESOURCE_GROUP: ${{ steps.config-env.outputs.AZUREAI_RESOURCE_GROUP }}      
+      AZURE_SEARCH_ENDPOINT: ${{ steps.config-env.outputs.AZURE_SEARCH_ENDPOINT }}
+      AZURE_SEARCH_INDEX_SAMPLE_DATA: ${{ steps.config-env.outputs.AZURE_SEARCH_INDEX_SAMPLE_DATA }}
+      AZURE_SEARCH_NAME: ${{ steps.config-env.outputs.AZURE_SEARCH_NAME }}
+      AZURE_SUBSCRIPTION_ID: ${{ steps.config-env.outputs.AZURE_SUBSCRIPTION_ID }}
+      PROMPTFLOW_SERVING_ENGINE: ${{ steps.config-env.outputs.PROMPTFLOW_SERVING_ENGINE }}
+      PROMPTFLOW_WORKER_NUM: ${{ steps.config-env.outputs.PROMPTFLOW_WORKER_NUM }}     
+    steps: 
+      - uses: actions/checkout@v4
+      - name: Provision dev environment
+        uses: ./.github/actions/config-env
+        id: config-env
+        with:
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
+          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}          
+          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
+          MANUAL_PROVISIONING: ${{ vars.MANUAL_PROVISIONING }}
+          AZURE_DEPLOY_APP_SERVICE: true
+        env:
+          AZUREAI_PROJECT_NAME: ${{ vars.AZUREAI_PROJECT_NAME }}
+          AZURE_APP_SERVICE_NAME: ${{ vars.AZURE_APP_SERVICE_NAME }}
+          AZURE_APP_SERVICE_PLAN_NAME: ${{ vars.AZURE_APP_SERVICE_PLAN_NAME }}
+          AZURE_CONTAINER_REGISTRY_NAME: ${{ vars.AZURE_CONTAINER_REGISTRY_NAME }}
+          AZURE_CONTAINER_REPOSITORY_NAME: ${{ vars.AZURE_CONTAINER_REPOSITORY_NAME }}
+          AZURE_OPENAI_API_VERSION: ${{ vars.AZURE_OPENAI_API_VERSION }}
+          AZURE_OPENAI_CHAT_DEPLOYMENT: ${{ vars.AZURE_OPENAI_CHAT_DEPLOYMENT }}
+          AZURE_OPENAI_EMBEDDING_DEPLOYMENT: ${{ vars.AZURE_OPENAI_EMBEDDING_DEPLOYMENT }}
+          AZURE_OPENAI_EMBEDDING_MODEL: ${{ vars.AZURE_OPENAI_EMBEDDING_MODEL }}
+          AZURE_OPENAI_ENDPOINT: ${{ vars.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_NAME: ${{ vars.AZURE_OPENAI_NAME }}
+          AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
+          AZUREAI_RESOURCE_GROUP: ${{ vars.AZUREAI_RESOURCE_GROUP }}               
+          AZURE_SEARCH_ENDPOINT: ${{ vars.AZURE_SEARCH_ENDPOINT }}
+          AZURE_SEARCH_INDEX_SAMPLE_DATA: "false" # It's already populated during PR
+          AZURE_SEARCH_NAME: ${{ vars.AZURE_SEARCH_NAME }}
+          PROMPTFLOW_SERVING_ENGINE: ${{ vars.PROMPTFLOW_SERVING_ENGINE }}
+          PROMPTFLOW_WORKER_NUM: ${{ vars.PROMPTFLOW_WORKER_NUM }}
+          AZURE_PRINCIPAL_ID: ${{ vars.AZURE_PRINCIPAL_ID }}
+          AZUREAI_HUB_NAME: ${{ vars.AZUREAI_HUB_NAME }}
+          AZURE_APP_INSIGHTS_NAME: ${{ vars.AZURE_APP_INSIGHTS_NAME }}
+          AZURE_KEY_VAULT_NAME: ${{ vars.AZURE_KEY_VAULT_NAME }}
+          AZURE_LOG_ANALYTICS_NAME: ${{ vars.AZURE_LOG_ANALYTICS_NAME }}
+          AZURE_STORAGE_ACCOUNT_NAME: ${{ vars.AZURE_STORAGE_ACCOUNT_NAME }}
+
+  deploy-flow:
     if: ${{ github.repository != 'Azure/llmops-project-template' }}    
     runs-on: ubuntu-latest
+    needs: [setup-env-job] 
     environment: dev
     env:
       AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
       AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
       AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      VERBOSE: ${{ vars.VERBOSE }}
       AZURE_DEV_COLLECT_TELEMETRY: no
 
     steps:   
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install azd
-        uses: Azure/setup-azd@v1.0.0
-      
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Set up Azure CLI
+        uses: azure/login@v2
         with:
-          python-version: '3.11'
-
-      - name: az Login
-        run: |
-          info=$(echo $AZURE_CREDENTIALS | jq -r '.')
-          echo "::add-mask::$(echo $info | jq -r '.clientSecret')"
-          az login \
-            --service-principal \
-            --username "$(echo $info | jq -r '.clientId')" \
-            --password "$(echo $info | jq -r '.clientSecret')" \
-            --tenant "$(echo $info | jq -r '.tenantId')"
-        shell: bash
-
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+  
       - name: Set az account
         uses: azure/CLI@v2
         with:
           inlineScript: |
-            az account set --subscription ${{ env.AZURE_SUBSCRIPTION_ID }}
-
-      - name: azd Login
-        run: |
-          info=$(echo $AZURE_CREDENTIALS | jq -r '.')
-          echo "::add-mask::$(echo $info | jq -r '.clientSecret')"
-          azd auth login \
-            --client-id "$(echo $info | jq -r '.clientId')" \
-            --client-secret "$(echo $info | jq -r '.clientSecret')" \
-            --tenant-id "$(echo $info | jq -r '.tenantId')"
-        shell: bash  
-
-      - name: Provision Infrastructure
-        run: |
-          if [ ! -d ".azure" ]; then
-            echo "Initializing azd environment"
-            azd init -e $AZURE_ENV_NAME -l $AZURE_LOCATION -s $AZURE_SUBSCRIPTION_ID
-          fi        
-          azd provision --no-prompt
+            az account set --subscription $AZURE_SUBSCRIPTION_ID
+        
+      - name: Deploy Flow
         env:
-          AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
-          AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
-          AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+          AZURE_APP_SERVICE_NAME: ${{needs.setup-env-job.outputs.AZURE_APP_SERVICE_NAME}}
+          AZURE_APP_SERVICE_PLAN_NAME: ${{needs.setup-env-job.outputs.AZURE_APP_SERVICE_PLAN_NAME}}
+          AZURE_CONTAINER_REGISTRY_NAME: ${{needs.setup-env-job.outputs.AZURE_CONTAINER_REGISTRY_NAME}}
+          AZURE_CONTAINER_REPOSITORY_NAME: ${{needs.setup-env-job.outputs.AZURE_CONTAINER_REPOSITORY_NAME}}
+          AZURE_RESOURCE_GROUP: ${{needs.setup-env-job.outputs.AZURE_RESOURCE_GROUP}}
+          AZURE_SUBSCRIPTION_ID: ${{needs.setup-env-job.outputs.AZURE_SUBSCRIPTION_ID}}          
+        shell: bash             
+        run: | 
+          # Deploy Flow
+          echo "🔶 | Deploying to Azure"
+          image_tag="${AZURE_CONTAINER_REPOSITORY_NAME}:${{ github.sha }}"
+          name="${AZURE_APP_SERVICE_NAME}"
+          service_plan_name="${AZURE_APP_SERVICE_PLAN_NAME}"
+          subscription="${AZURE_SUBSCRIPTION_ID}"
+          resource_group="${AZURE_RESOURCE_GROUP}"
+          registry_name="${AZURE_CONTAINER_REGISTRY_NAME}"
+          full_registry_name="${registry_name}.azurecr.io"
+          acr_image_tag=$full_registry_name/$image_tag
+          verbose=${VERBOSE:-false}
 
-      - name: Get azd env variables
-        run: |
+          echo "Image Tag: $image_tag"
+          echo "ACR Image Tag: $acr_image_tag"          
+          echo "App Service Name: $name"
+          echo "Service Plan Name: $service_plan_name"
+          echo "Subscription ID: $subscription"
+          echo "Resource Group: $resource_group"
+          echo "Registry Name: $registry_name"
+          echo "Full Registry Name: $full_registry_name"
 
-          echo "AZURE_SUBSCRIPTION_ID is $AZURE_SUBSCRIPTION_ID"
-          echo "AZURE_LOCATION is $AZURE_LOCATION"
-          echo "AZURE_ENV_NAME is $AZURE_ENV_NAME"
+          function append_to_command {
+            command=$1
+            if [ -n "$subscription" ]; then
+              command="$command --subscription $subscription"
+            fi
+            if [ "$verbose" != false ]; then
+              command="$command --debug"
+            fi
+            echo "$command"
+          }
 
-          if [ ! -d ".azure" ]; then
-            echo "Initializing azd environment"
-            azd init -e $AZURE_ENV_NAME -l $AZURE_LOCATION -s $AZURE_SUBSCRIPTION_ID
+          echo "🔶 | Trying to login to $registry_name..."
+          az acr login -n "$registry_name"
+
+          # Check if the container image exists
+          echo "🔶 | Checking if ${acr_image_tag} exists..."
+          set +e
+          image_exists=$(az acr repository show --name $registry_name --image ${acr_image_tag} --query "name" -o tsv > /dev/null 2>&1 && echo true || echo false)
+          set -e
+          if [ -z "$image_exists" ]; then
+            echo "❌ | $acr_image_tag does not exist"
+            exit 1
+          else
+            echo "✅ | $acr_image_tag exists"
           fi
 
-          azd env refresh
-          echo "azd $AZURE_ENV_NAME environment variables"
+          # Check if the app exists
+          echo "🔶 | Checking if the app exists..."
+          app_exists=$(az webapp show --name $name --resource-group $resource_group --query "name" -o tsv)
 
-          echo "AZURE_ENV_NAME is $AZURE_ENV_NAME"
-          echo "AZURE_LOCATION is $AZURE_LOCATION"
-          echo "AZURE_SUBSCRIPTION_ID is $AZURE_SUBSCRIPTION_ID"
+          if [ -z "$app_exists" ]; then
+            # Create app
+            echo "🔶 | Creating $name app..."
+            command="az webapp create --name $name -p $service_plan_name --deployment-container-image-name $acr_image_tag --startup-file 'bash start.sh' -g $resource_group"
+            command=$(append_to_command "$command")
+            echo "$command"
+            eval "$command"
+          else
+            # Update app
+            echo "🔶 | Updating $name app..."
+            command="az webapp config container set --name $name --resource-group $resource_group --container-image-name $acr_image_tag"
+            command=$(append_to_command "$command")
+            echo "$command"
+            eval "$command"
+          fi
+          
+          # Set Registry and ACR credentials
+          echo "🔶 | Setting ACR credentials in $registry_name registry..."
+          az acr update -n $registry_name --admin-enabled true
+          acr_username=$(az acr credential show --name $registry_name --query username --output tsv)
+          acr_password=$(az acr credential show --name $registry_name --query passwords[0].value --output tsv)
+          az webapp config container set --name $name --resource-group $resource_group --container-registry-user $acr_username --container-registry-password $acr_password 
 
-          AZURE_CONTAINER_REGISTRY_NAME=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_CONTAINER_REGISTRY_NAME | cut -d'=' -f2 | tr -d '"')
-          echo "AZURE_CONTAINER_REGISTRY_NAME is $AZURE_CONTAINER_REGISTRY_NAME"
-          echo "AZURE_CONTAINER_REGISTRY_NAME=$AZURE_CONTAINER_REGISTRY_NAME" >> $GITHUB_ENV
+          # Config environment variables
+          echo "🔶 | Config  app $name env variables ..." 
+          # Port default to 8080 corresponding to the DockerFile
+          command="az webapp config appsettings set -g $resource_group --name $name --settings USER_AGENT=promptflow-appservice WEBSITES_PORT=8080"
+          command=$(append_to_command "$command")
+          echo "$command"
+          eval "$command"
 
-          AZURE_APP_SERVICE_NAME=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_APP_SERVICE_NAME | cut -d'=' -f2 | tr -d '"')
-          echo "AZURE_APP_SERVICE_NAME is $AZURE_APP_SERVICE_NAME"
-          echo "AZURE_APP_SERVICE_NAME=$AZURE_APP_SERVICE_NAME" >> $GITHUB_ENV
+          # Restarting app
+          echo "🔶 | Restarting app ...$name"          
+          az webapp restart --name $name --resource-group $resource_group
 
-          AZURE_RESOURCE_GROUP=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_RESOURCE_GROUP | cut -d'=' -f2 | tr -d '"')
-          echo "AZURE_RESOURCE_GROUP is $AZURE_RESOURCE_GROUP"
-          echo "AZURE_RESOURCE_GROUP=$AZURE_RESOURCE_GROUP" >> $GITHUB_ENV
-
-      - name: Deploy to Azure App Service
-        run: |
-          echo "AZURE_CONTAINER_REGISTRY_NAME is $AZURE_CONTAINER_REGISTRY_NAME"
-          echo "AZURE_APP_SERVICE_NAME is $AZURE_APP_SERVICE_NAME"
-          echo "AZURE_RESOURCE_GROUP is $AZURE_RESOURCE_GROUP"
-          echo "IMAGE_TAG is ${{ github.event.inputs.image_tag }}"
-
-          # Enable admin user for ACR
-          az acr update --name $AZURE_CONTAINER_REGISTRY_NAME --admin-enabled true          
-
-          # Configure Web App to use ACR
-          ACR_LOGIN_SERVER=$(az acr show --name $AZURE_CONTAINER_REGISTRY_NAME --query loginServer --output tsv)
-          az webapp config container set --name $AZURE_APP_SERVICE_NAME --resource-group $AZURE_RESOURCE_GROUP --container-image-name $ACR_LOGIN_SERVER/${{ github.event.inputs.image_tag }} --container-registry-url https://$ACR_LOGIN_SERVER
-
-          # Set ACR credentials
-          ACR_USERNAME=$(az acr credential show --name $AZURE_CONTAINER_REGISTRY_NAME --query username --output tsv)
-          ACR_PASSWORD=$(az acr credential show --name $AZURE_CONTAINER_REGISTRY_NAME --query passwords[0].value --output tsv)
-          az webapp config container set --name $AZURE_APP_SERVICE_NAME --resource-group $AZURE_RESOURCE_GROUP --docker-registry-server-user $ACR_USERNAME --docker-registry-server-password $ACR_PASSWORD
-
-          # Restart Web App
-          az webapp restart --name $AZURE_APP_SERVICE_NAME --resource-group $AZURE_RESOURCE_GROUP
+          echo "🔗 Please go to https://portal.azure.com/ to config environment variables of $name app at (Settings>Configuration) or (Settings>Environment variables)"
+          echo "Reach deployment logs at (Deployment>Deployment Central) and app logs at (Monitoring>Log stream)"
+          echo "🔗 Reach advanced deployment tools at https://$name.scm.azurewebsites.net/"
+          echo "🔗 Reach more details about app service at https://learn.microsoft.com/en-us/azure/app-service/"
 
       - name: GitHub Summary Step
         if: ${{ success() }}
